<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/editProfileVerticalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/editProfileVerticalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/editProfileTopGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/editProfileMidGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/editProfileBotGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <ImageView
        android:id="@+id/goBackButtonImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/go_back_button"
        android:contentDescription="@string/go_back" />

    <ImageView
        android:id="@+id/editPictureImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/editProfileTopGuideline"
        app:layout_constraintStart_toStartOf="@id/editProfileVerticalGuideline1"
        app:srcCompat="@drawable/profile_top_bar_avatar"
        android:contentDescription="@string/profile_pic_explain" />

    <EditText
        android:id="@+id/editNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/name"
        android:inputType="text"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="@id/editPictureImageView"
        app:layout_constraintBottom_toTopOf="@+id/editProfileTopGuideline"
        app:layout_constraintEnd_toEndOf="@+id/editProfileVerticalGuideline2"
        app:layout_constraintStart_toStartOf="@id/editProfileVerticalGuideline1"
        android:autofillHints="" />

    <TextView
        android:id="@+id/editProfileAboutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/about_me"
        app:layout_constraintEnd_toEndOf="@id/editProfileVerticalGuideline2"
        app:layout_constraintStart_toStartOf="@id/editProfileVerticalGuideline1"
        app:layout_constraintTop_toBottomOf="@+id/editProfileTopGuideline" />

    <EditText
        android:id="@+id/aboutMeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/about_me"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/editProfileVerticalGuideline2"
        app:layout_constraintStart_toStartOf="@id/editProfileVerticalGuideline1"
        app:layout_constraintTop_toBottomOf="@+id/editProfileAboutText"
        android:autofillHints="" />

    <GridLayout
        android:id="@+id/editProfileGridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="6"
        app:layout_constraintBottom_toTopOf="@id/editProfileBotGuideline"
        app:layout_constraintEnd_toEndOf="@id/editProfileVerticalGuideline2"
        app:layout_constraintStart_toStartOf="@id/editProfileVerticalGuideline1"
        app:layout_constraintTop_toBottomOf="@id/editProfileMidGuideline">

        <ImageView
            android:id="@+id/dogImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_columnWeight="1"
            android:background="@drawable/pressed_button_background"
            android:contentDescription="@string/dog"
            android:onClick="onInterestClicked"
            android:stateListAnimator="@anim/scale_button_animation"
            app:srcCompat="@drawable/interests_dogwalk" />

        <ImageView
            android:id="@+id/bookImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_columnWeight="1"
            android:background="@drawable/pressed_button_background"
            android:contentDescription="@string/book"
            android:onClick="onInterestClicked"
            android:stateListAnimator="@anim/scale_button_animation"
            app:srcCompat="@drawable/interests_book" />

        <ImageView
            android:id="@+id/gardenImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_columnWeight="1"
            android:background="@drawable/pressed_button_background"
            android:contentDescription="@string/garden"
            android:onClick="onInterestClicked"
            android:stateListAnimator="@anim/scale_button_animation"
            app:srcCompat="@drawable/interests_garden" />

        <ImageView
            android:id="@+id/strollerImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_columnWeight="1"
            android:background="@drawable/pressed_button_background"
            android:contentDescription="@string/stroller"
            android:onClick="onInterestClicked"
            android:stateListAnimator="@anim/scale_button_animation"
            app:srcCompat="@drawable/interests_stroller" />

        <ImageView
            android:id="@+id/coffeeImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_columnWeight="1"
            android:background="@drawable/pressed_button_background"
            android:contentDescription="@string/coffee"
            android:onClick="onInterestClicked"
            android:stateListAnimator="@anim/scale_button_animation"
            app:srcCompat="@drawable/interests_coffee_mug" />

        <ImageView
            android:id="@+id/airPlaneImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_columnWeight="1"
            android:background="@drawable/pressed_button_background"
            android:contentDescription="@string/airplane"
            android:onClick="onInterestClicked"
            android:stateListAnimator="@anim/scale_button_animation"
            app:srcCompat="@drawable/interests_airplane_takeoff" />

        <ImageView
            android:id="@+id/cookingImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_columnWeight="1"
            android:background="@drawable/pressed_button_background"
            android:contentDescription="@string/cooking"
            android:onClick="onInterestClicked"
            android:stateListAnimator="@anim/scale_button_animation"
            app:srcCompat="@drawable/interests_cooking" />

        <ImageView
            android:id="@+id/cinemaImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_columnWeight="1"
            android:background="@drawable/pressed_button_background"
            android:contentDescription="@string/cinema"
            android:onClick="onInterestClicked"
            android:stateListAnimator="@anim/scale_button_animation"
            app:srcCompat="@drawable/interests_movie" />

        <ImageView
            android:id="@+id/restaurantImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_columnWeight="1"
            android:background="@drawable/pressed_button_background"
            android:contentDescription="@string/restaurant"
            android:onClick="onInterestClicked"
            android:stateListAnimator="@anim/scale_button_animation"
            app:srcCompat="@drawable/interests_restaurant" />

        <ImageView
            android:id="@+id/sportImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_columnWeight="1"
            android:background="@drawable/pressed_button_background"
            android:contentDescription="@string/sport"
            android:onClick="onInterestClicked"
            android:stateListAnimator="@anim/scale_button_animation"
            app:srcCompat="@drawable/interests_football" />

        <ImageView
            android:id="@+id/gameImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_columnWeight="1"
            android:background="@drawable/pressed_button_background"
            android:contentDescription="@string/game"
            android:onClick="onInterestClicked"
            android:stateListAnimator="@anim/scale_button_animation"
            app:srcCompat="@drawable/interests_gaming_controller" />

        <ImageView
            android:id="@+id/theatreImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_columnWeight="1"
            android:background="@drawable/pressed_button_background"
            android:contentDescription="@string/theatre"
            android:onClick="onInterestClicked"
            android:stateListAnimator="@anim/scale_button_animation"
            app:srcCompat="@drawable/interests_theatre_mask" />

    </GridLayout>

    <ImageView
        android:id="@+id/birthCakeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/editProfileVerticalGuideline2"
        app:layout_constraintStart_toStartOf="@id/editProfileVerticalGuideline1"
        app:layout_constraintTop_toBottomOf="@+id/editProfileBotGuideline"
        app:srcCompat="@drawable/profile_birthday_cake"
        android:contentDescription="@string/year_pic_explain" />

    <NumberPicker
        android:id="@+id/birthYearPicker"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:isScrollContainer="true"
        android:text="@string/birth_year"
        app:layout_constraintEnd_toEndOf="@id/editProfileVerticalGuideline2"
        app:layout_constraintStart_toStartOf="@id/editProfileVerticalGuideline1"
        app:layout_constraintTop_toBottomOf="@+id/birthCakeImageView" />

    <Button
        android:id="@+id/profileSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primary_blue"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/save_all"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@id/editProfileVerticalGuideline2"
        app:layout_constraintStart_toStartOf="@id/editProfileVerticalGuideline1"
        app:layout_constraintTop_toBottomOf="@+id/birthYearPicker" />

</androidx.constraintlayout.widget.ConstraintLayout>