<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/primary_blue"
    android:padding="0dp">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_background_coffee" />


    <View
        android:id="@+id/faderView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        app:cardBackgroundColor="@color/primary_text_background_transparent_85"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/squareContainer"
        app:layout_constraintStart_toStartOf="@+id/squareContainer"
        app:layout_constraintTop_toTopOf="@+id/backgroundImageView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:id="@+id/authorProfilePictureImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_top_bar_avatar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="0dp">

                <TextView
                    android:id="@+id/cityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:id="@+id/eventTypeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_type"
                    android:textColor="@color/primary_text" />
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/squareContainer"
        android:layout_width="360dp"
        android:layout_height="399dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/primary_text_background_transparent_85"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundImageView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:id="@+id/attendedPeopleLinearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="120dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/editImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/attendedPeopleImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="4dp"
                android:elevation="8dp"
                app:srcCompat="@drawable/profile_top_bar_avatar" />
        </LinearLayout>

        <TextView
            android:id="@+id/eventNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/event_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/event_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventNameTextView" />

        <TextView
            android:id="@+id/dayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/event_day"
            app:layout_constraintStart_toStartOf="@+id/timeTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/event_time"
            app:layout_constraintStart_toStartOf="@+id/dateTextView"
            app:layout_constraintTop_toBottomOf="@+id/dayTextView" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/event_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeTextView" />

        <TextView
            android:id="@+id/authorUserNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/event_name_age"
            android:shadowColor="#808080"
            android:shadowDx="0"
            android:shadowDy="2"
            android:shadowRadius="4"
            app:layout_constraintStart_toStartOf="@+id/descriptionTextView"
            app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

        <ImageView
            android:id="@+id/deleteImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/icon_bin" />

        <ImageView
            android:id="@+id/editImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteImageView"
            app:srcCompat="@drawable/icon_edit" />

        <ImageView
            android:id="@+id/chatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editImageView"
            app:srcCompat="@drawable/icon_message" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="217dp"
            android:layout_height="64dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/rounded_background"
            android:elevation="12dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:shadowColor="#808080"
            android:shadowDx="0"
            android:shadowDy="2"
            android:shadowRadius="4"
            android:text="@string/event_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authorUserNameTextView" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="@color/primary_blue"
            android:elevation="12dp"
            android:text="@string/event_attend"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toTopOf="@+id/attendedPeopleLinearLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/openSpotsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/event_attend_spots"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/attendButtonTextView"
            android:layout_width="100dp"
            android:layout_height="31dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_background_button"
            android:elevation="12dp"
            android:gravity="center"
            android:shadowColor="#808080"
            android:shadowDx="0"
            android:shadowDy="2"
            android:shadowRadius="4"
            android:text="@string/event_attend"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toTopOf="@+id/attendedPeopleLinearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
